# 4dBlocks

./: Cargo.toml
crates/game/: Cargo.toml  build.rs
crates/game/fonts/: bmfont_config.bmfc  space_mono.fnt
crates/game/shaders/: ellipses.slang  lines.slang  quads.slang  ray_tracing.slang
crates/game/shaders/include/: camera.slang  ray.slang  ui_camera.slang
crates/game/src/: app.rs  camera.rs  main.rs  ray_tracing.rs  state.rs  ui.rs
crates/game/src/ray_tracing/: target.rs
crates/game/src/ui/: font.rs  texture.rs
crates/math/src/: lib.rs
