[package]
name = "game"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { workspace = true }
cgmath = { workspace = true }
image = { version = "0.25.8", default-features = false, features = ["png"] }
math = { workspace = true }
pollster = "0.4.0"
serde = { workspace = true }
slotmap = "1.0.7"
wgpu = "26.0.1"
winit = "0.30.12"

[lints]
workspace = true
